iot/kubernetes-deploy/09-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
      - jadu.ga
      secretName: angular-tls
  rules:
  - host: "jadu.ga"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-angular-service
            port:
              number: 80
      - pathType: Prefix
        path: "/db"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/test"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/getsensor/<id>"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/getrelay/<id>"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/setrelay/<id>"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/setsensor/<id>"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/addrelay/"
        backend:
          service:
            name: my-service
            port:
              number: 8088
      - pathType: Prefix
        path: "/addsensor/"
        backend:
          service:
            name: my-service
            port:
              number: 8088
